# linux_experiment

./: CMakeLists.txt  README.md  byte_order.c  check_byte_order.c  checksum.c  fork_test  fork_test.c  multi_proc_basis.c  multi_proc_signal.c  multi_thrd_basis.c  sig_basis.c  tcp_echo_cli.c  tcp_echo_srv.c  tcp_single_prc_client.c  tcp_single_proc_server.c
Operating_System/: cp.c  file_status.sh  philosopher.c  philosopher_s.c  pipe.c  producer_consumer.c  producer_consumer_f.c  temp  test.sh  test_o.c  usr_monitor.sh
Operating_System/dst/: test.txt
